Push all local changes to mongodb branch

--- a/airflow/Dockerfile
+++ b/airflow/Dockerfile
@@ -21,4 +21,8 @@ RUN pip install --upgrade pip && \
     boto3 \
     pyiceberg \
     thrift \
-    openpyxl
+    openpyxl \
+    pymongo \
+    pandas \
+    dnspython \ 
+    LimeNDAX
