--- a/airflow/Dockerfile
+++ b/airflow/Dockerfile
@@ -15,11 +15,17 @@ RUN apt-get update && apt-get install -y \
 USER airflow
 
 RUN pip install --upgrade pip
-RUN pip install pyarrow==18.1.0 pyiceberg==0.8.0 duckdb boto3 thrift openpyxl
-#    pip install --no-cache-dir \
-#duckdb \
-#"pyarrow>=10.0.1,<10.1.0" \
-#boto3 \
-#pyiceberg \
-#thrift \
-#openpyxl
+#Anetil töötab (-> parquet to iceberg ERROR: Iceberg does not yet support 'ns' timestamp precision)
+RUN pip install pyarrow==18.1.0 pyiceberg==0.8.0 duckdb boto3 thrift openpyxl 
+
+#Ima pyicebergi versioonita (-> parquet to iceberg ERROR: Iceberg does not yet support 'ns' timestamp precision)
+#RUN pip install pyarrow==18.1.0 pyiceberg duckdb boto3 thrift openpyxl 
+
+#Annabeli versioon (-> iceberg_to_duckdb ERROR: concat_tables() got an unexpected keyword argument 'promote_options')
+#RUN pip install --no-cache-dir \
+#    duckdb \
+#    "pyarrow>=10.0.1,<10.1.0" \
+#    boto3 \
+#    pyiceberg \
+#    thrift \
+#    openpyxl
