--- a/compose.yml
+++ b/compose.yml
@@ -34,8 +34,8 @@ services:
       - "9000:9000"   # MinIO API port
       - "9001:9001"   # MinIO Console port
     environment:
-      MINIO_ROOT_USER: group8      
-      MINIO_ROOT_PASSWORD: group8  
+      MINIO_ROOT_USER: minioadmin    
+      MINIO_ROOT_PASSWORD: minioadmin 
       MINIO_DOMAIN: minio
     command: server /data --console-address ":9001"
     volumes:
